# EMBER_SELECTION

./: .gitignore  EMBER2024_Feature_Selection_Plan-v4.md  pyproject.toml  setup.cfg  todo.txt
Documentation/: embedded_process_audit.md  feature_index_map.json  feature_vector_membership.md  mutual_info.md  thrember_lite_plan.md  thrember_lite_usage.md
Documentation/Example Row/: example_row.json  example_row_feature_vector.json  example_row_non_feature_vector.json  example_row_summary.md  example_row_toplevel.json  first_row_vector.json
Documentation/Overview/: process_overview.md  repo_overview.md
custom_scripts/: bernoulli_sample.py  build_feature_index_map.py  check_labels.py  count_rows.py  drop_features.py  eval_thrember_lite.py  mi_feature_selection.py  run_thrember_lite.py  shap_cluster_feature_selection.py  shap_cluster_feature_selection_HPC.md  thrember_lite.md  train_custom_lgbm_fs.py  train_custom_lgbm_fs_HPC.md  vectorize_dataset.py
custom_scripts/Helper Scripts/: download_challenge.py
custom_scripts/old_data/: dropped_features.csv  dropped_features.json
examples/: eval_lgbm.py  lgbm_config.json
output/: model.txt.dropped_features.json
output/Embedded/: embedded_dropped_features.json  embedded_report.txt  model.txt  updated_dropped_features.json
output/Mutual_Information/: dropped_features.csv  dropped_features.json  report.txt
output/SHAP/: baseline_model.txt  dropped_features.csv  shap_dropped_features.json
runs/: dropped_features.csv  shap_report.txt
runs/EMBED01/: model.txt  spec.json
runs/MI01/: model.txt  spec.json
(+30 files in other folders)
