[metadata]
name = EMBER2024
version = 1.0.0

[options]
packages = find:
package_dir =
    = src
include_package_data = True
python_requires = >=3.10
install_requires =
    setuptools>=71.0.0
    setuptools-scm>=8.3.1
    lightgbm>=4.5.0
    pefile>=2024.8.26
    polars>=1.8.2
    scikit-learn>=1.5.1
    tqdm>=4.66.5
    signify>=0.9.1
    huggingface_hub>=0.32.4
    matplotlib>=3.10.3
    lightgbm>=4.6.0
    shap>=0.46.0


[options.package_data]
thrember = *.txt

[options.packages.find]
where = src